--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8" />
-    <title>NgTemplate</title>
+    <title>Angular • TodoMVC</title>
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
